--- a/partials/panels/section-04.twig
+++ b/partials/panels/section-04.twig
@@ -2,8 +2,9 @@
 {% set cardIndex = 0 %}
 
 
-<div class="row" data-section="03">
+<div class="row" data-section="04">
     <div class="col-12">
+        <div class="u-generic-topBorder "></div>
         <div class="c-page-head c-page-head-xs">
             <div class="u-heading__large u-heading__large-xs u-pr--6">{{title}}</div>
             <a href="{{link}}" class="c-page-head__link">View all</a>
@@ -11,40 +12,63 @@
     </div>
 </div>
 
-
-
 <div class="row">
-    {% set cardClass = [' card-4-tablet',' card-4-tablet',' card-4-tablet',' card-1-tablet'] %}
-    {% for i in 0..3 if articles[articleCount] %}
-
-        <div class="col-12 col-lg-3{% if i == 3 %} col-md-12{% else %} col-md-4{% endif %}">
-            {{this.render('../_single-article.twig', {
-                article: articles[articleCount], 
-                position: (articleCount+1),
-                imageSize: {width: 740, height: 360},
-                containerClass: "card-5-mobile card-2-desktop card-2-desktop-lg" ~cardClass[i],
-                timeSuppress: timeSuppress
-            }) | raw}}
-            {% set articleCount = (dev) ? articleCount : articleCount + 1 %}
+    <div class="col-12 {% if adslots[0] is defined %}col-lg-9{% endif %}">
+        <div class="row">
+            <div class="col-12">
+                <div class="c-cards-container c-cards-container-xs bottom-border">
+                    {{this.render('../_single-article.twig', {
+                    article: articles[articleCount],
+                    position: (articleCount+1),
+                    imageSize: {width: 296, height: 260},
+                    containerClass: "card-7-mobile card-7-tablet card-7-desktop",
+                    timeSuppress: timeSuppress
+                    }) | raw}}
+                    {% set articleCount = (dev) ? articleCount : articleCount + 1 %}
+                </div>
+            </div>
         </div>
-    {% endfor %}
+        <div class="row">
+            <div class="col">
+                <div class="c-cards-container c-cards-container-xs bottom-border">
+                    <div class="row">
+                        {% for i in 1..4 if articles[articleCount] %}
 
-    <div class="col-12 col-lg-9 d-md-none d-lg-block">
-        {{this.render('../_single-article.twig', {
-            article: articles[articleCount], 
-            position: (articleCount+1),
-            imageSize: {width: 740, height: 360},
-            behaviour: 'lightbox',
-            containerClass: "card-1-mobile card-1-tablet card-1-desktop",
-            timeSuppress: timeSuppress
-        }) | raw}}
-        {% set articleCount = (dev) ? articleCount : articleCount + 1 %}
+                        <div class="col-12 col-lg-3 left-border">
+                            {{this.render('../_single-article.twig', {
+                            article: articles[articleCount],
+                            position: (articleCount+1),
+                            imageSize: {width: 296, height: 260},
+                            containerClass: "card-1-mobile card-1-tablet card-1-desktop",
+                            timeSuppress: timeSuppress
+                            }) | raw}}
+                            {% set articleCount = (dev) ? articleCount : articleCount + 1 %}
+                        </div>
+                        {% endfor %}
+                    </div>
+                </div>
+                <div class="c-cards-container c-cards-container-xs bottom-border">
+                    <div class="row">
+                        {% for i in 5..8 if articles[articleCount] %}
+
+                        <div class="col-12 col-lg-3 left-border">
+                            {{this.render('../_single-article.twig', {
+                            article: articles[articleCount],
+                            position: (articleCount+1),
+                            imageSize: {width: 296, height: 260},
+                            containerClass: "card-1-mobile card-1-tablet card-1-desktop",
+                            timeSuppress: timeSuppress
+                            }) | raw}}
+                            {% set articleCount = (dev) ? articleCount : articleCount + 1 %}
+                        </div>
+                        {% endfor %}
+                    </div>
+                </div>
+            
+            </div>
+        </div>
     </div>
-
-
-    <div class="col-12 col-lg-3">
-        {% if adslots[0] is defined %}
-            <div class="j-adslot" id="{{adslots[0]}}" data-adshape="mrec"></div>
-        {% endif %}
-    </div>
-</div> <!-- row -->
+    {% if adslots[0] is defined %}
+    <div class="col-12 col-lg-3"></div>
+    {% endif %}
+</div>
