--- a/search.twig
+++ b/search.twig
@@ -1,7 +1,6 @@
-
-{% set limit = 3 %}
+{% set limit = 6 %}
 {% set articles = _Search.searchArticles({'limit': limit, 'offset': 0, 'search': search, 'sortBy': 'published'}) %}
-{% set config   = _Network.getThemeConfig() %}
+{% set config = _Network.getThemeConfig() %}
 
 
 {% set firstCount = articles | length %}
@@ -13,58 +12,57 @@
 <!-- used to index each article as we loop over throughout the template -->
 {% set articleCount = 0 %}
 
-<main id="main" class="o-body-container o-body-container-md searchPage u-margin-top-60" role="main">
-    <div class="container">
-        <div class="row">
-            <div class="col-12 col-lg-7 j-article-container">
-                <div class="c-search">
+<main id="main" class="o-body-container o-body-container-md searchPage u-margin-top-30" role="main">
+    <div class="c-search">
+        <div class="container">
+            <div class="row">
+                <div class="col-12 col-lg-10 mx-auto">
                     <div class="c-search__head">
-                        {% set resultString = firstCount < 2 ? 'result' : 'results' %}
-                        Showing <span>{{firstCount}}</span>  {{resultString}} for '<span class="c-search__name">{{search | raw}}</span>'
+                        {% set resultString = firstCount < 2 ? 'result' : 'results' %} 
+                        <div class="c-search__head-text">Showing {{firstCount}} {{resultString}} for:</div>
+                        <div class="c-search__head-title">{{search | raw}}</div>
                     </div>
-
-                    <div id="results" style="min-height:600px;">
-                    {% for article in articles %}
-
-                        {{this.render('partials/_single-article.twig', {
-                            article: article, 
-                            containerClass: "card-5-mobile card-5-tablet card-5-desktop"
-                        }) | raw}}
-
-                    {% endfor %}
-                    </div>
-    
-
-                    {% if articles|length >= limit %}
-                        <section class="">
-                            <div class="row">
-                                {{ this.render('partials/ajaxarticles_new.twig', {
-                                    name            : "search-load",
-                                    label           : "more",
-                                    buttonClass     : "",
-                                }) | raw }}
-                            </div>
-                        </section>
-                    {% endif %}
-
-                </div>
-
-            </div>
-
-
-            <div class="col-12 offset-md-1 col-md-4">
-                <div class="o-body-container__right-layout j-article-sidebar">
-                    {% if config['inventory']['adSpace']['side-fix'][0] is defined %}
-                        <div class="j-adslot" id="{{config['inventory']['adSpace']['side-fix'][0]}}" data-adshape="side-fix"></div>
-                    {% endif %}
                 </div>
             </div>
         </div>
     </div>
+    <div class="c-search__container">
+        <div class="container">
+            <div class="row">
+                <div class="col-12 col-lg-10 mx-auto">
+                    <div class="col-12 col-lg-8">
+                        <div id="results" style="min-height:600px;">
+                        {% for article in articles %}
 
-</main><!-- .site-main -->
+                            {{this.render('partials/_single-article.twig', {
+                                article: article, 
+                                containerClass: "card-2-mobile card-9-tablet card-9-desktop u-margin-bottom-30"
+                            }) | raw}}
 
-
+                        {% endfor %}
+                        </div>
+                        {% if articles|length >= limit %}
+                        <section class="">
+                            <div class="row">
+                                <div class="col-12">
+                                    {{ this.render('partials/ajaxarticles_new.twig', {
+                                        name            : "search-load",
+                                        label           : "loading more",
+                                        buttonClass     : "",
+                                    }) | raw }}
+                                </div>
+                            </div>
+                        </section>
+                        {% endif %}
+                    </div>
+                    <div class="col-12 col-lg-4">
+                    
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</main>
 
 <script>
     // main script is defered so event listener makes sure
@@ -83,4 +81,3 @@
         });
     });
 </script>
-
