--- a/static/sass/components/_component.author.scss
+++ b/static/sass/components/_component.author.scss
@@ -1,5 +1,48 @@
 /* Begin page head style */
+
 .c-author {
+    @include flexbox;
+    @include flex-direction(column, vertical);
+    @include align-items(center);
+    height: 100%;
+    border-right: 1px solid $grey4;
+
+    &__avatar {
+        width: 120px;
+        @include size(120px);
+        max-width: 120px;
+        @include border-radius(50%);
+        @include flex(0 0 120px);
+        @include image_background();
+    }
+
+    &__details {
+        @include flexbox;
+        @include flex-direction(column, vertical);
+        @include align-items(center);
+        @include justify-content(center);
+        width: 100%;
+    }
+
+    &__name {
+        text-align: center;
+        max-width: 80%;
+        margin: 20px auto 10px;
+        @extend .u-heading__large;
+        @extend .u-heading__large-xs;
+    }
+
+    &__text {
+        max-width: 80%;
+        margin: 0 auto;
+        text-align: center;
+        color: $grey5;
+        @include font-size(14);
+        line-height: 1.71;
+    }
+}
+
+/* .c-author {
     @include flexbox;
     @include align-content(flex-start);
     @include align-items(flex-start);
@@ -143,6 +186,6 @@
             @include flex(0 0 calc(100% - 145px));
         }
     }
-}
+} */
 
 /* End page head style */
