--- a/static/sass/main.scss
+++ b/static/sass/main.scss
@@ -1,25 +1,17 @@
 //Bootstrap
-@import 'vendors/bootstrap/bootstrap';
-@import 'vendors/font-awesome-4.7.0/font-awesome';
+
+@import "vendors/font-awesome-4.7.0/font-awesome";
 // @import 'vendors/slick/slick';
 // @import 'vendors/slick/slick-theme';
 
 @import "settings.variables";
 // @import 'datetimepicker';
 
-
-
-@import "tools.functions";
 @import "tools.mixins";
-
-
 
 @import "owl-theme";
 
-
-
 @import "elements.all";
-
 
 @import "object.container";
 @import "object.hero";
@@ -32,56 +24,50 @@
 @import "object.arrow";
 @import "object.icons";
 
-
-
-
 //components
 
 // forms
-@import 'component.form';
-@import 'component.login-form';
-@import 'component.forgot-form';
-@import 'component.reset-password'; 
-@import 'component.checkbox'; 
+@import "component.form";
+@import "component.login-form";
+@import "component.forgot-form";
+@import "component.reset-password";
+@import "component.checkbox";
 
-@import 'component.error';
+@import "component.error";
 
-@import 'component.article';
-@import 'component.advertisment';
-@import 'component.related-articles';
-@import 'component.article-gallery';
-@import 'component.author';
-
+@import "component.article";
+@import "component.contact";
+@import "component.advertisment";
+@import "component.related-articles";
+@import "component.article-gallery";
+@import "component.author";
 
 // Events
-@import 'component.eventform';
-@import 'component.events';
-@import 'component.event';
+@import "component.eventform";
+@import "component.events";
+@import "component.event";
 
 //header
-@import 'component.header';
-@import 'component.header-top-bar';
-@import 'component.navigation';
-@import 'component.search-bar';
-@import 'component.responsiveNav';
+@import "component.header";
+@import "component.header-top-bar";
+@import "component.navigation";
+@import "component.search-bar";
+@import "component.responsiveNav";
 
-@import 'component.footer';
+@import "component.footer";
 
-@import 'component.messagebox';
-@import 'component.modals';
-@import 'component.modal';
-@import 'component.pagination';
-@import 'component.search';
+@import "component.messagebox";
+@import "component.modals";
+@import "component.modal";
+@import "component.search";
 
 // listings
 
-@import 'component.section';
-@import 'component.section-panel';
-@import 'component.form-pulldown'; 
+@import "component.section";
+@import "component.section-panel";
+@import "component.form-pulldown";
 
 //my account page
-
-
 
 // old
 @import "component.modal-login-form";
@@ -91,10 +77,6 @@
 @import "component.spinner-modal";
 @import "component.lightbox-modal";
 
-
-
-
-
 //Cards
 @import "card";
 @import "card-1";
@@ -102,10 +84,9 @@
 @import "card-3";
 @import "card-4";
 @import "card-5";
-
+@import "card-9";
 
 @import "event-card";
-
 
 //trumps
 @import "trumps.utilities";
