--- a/user-posts.twig
+++ b/user-posts.twig
@@ -1,7 +1,7 @@
 {{ set(this, 'title', 'User Profile') }}
 
 {% set networkData = _Network.getNetworkData() %}
-{% set limit = 10 %}
+{% set limit = 13 %}
 
 {% set firstCount = userArticles | length %}
 
@@ -10,69 +10,104 @@
 {% set profileImage =_Media.getMediaUrl( user.media, 500, 500, {crop: 'thumb', gravity: 'face', type:'user'} ) %}
 
 <main class="o-body-container o-body-container-md u-margin-top-60">
-
     <div class="container">
         <div class="row">
-
-            <div class="col-12">
+            <div class="col-12 col-lg-3">
                 <div class="c-author c-author-md">
-                    <div class="c-author-left c-author-left-md">  
-
-                        <div class="c-author__avatar c-author__avatar-xs u-image-covered" style="background-repeat:none;background-image:url({{profileImage}});">&nbsp;</div>
-                        
-                        <div class="c-author__details c-author__details-xs">
-                            <h3 class="c-author__name c-author__name-xs c-author__name-md">{{user.firstname | raw}} <br> {{user.lastname | raw}}</h3>
-                            {# <ul class="c-author__social">
-                                <li><a href="#"><i class="fa fa-facebook"></i></a></li>
-                                <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-                                <li><a href="#"><i class="fa fa-instagram"></i></a></li>
-                                <li><a href="#"><i class="fa fa-youtube-play"></i></a></li>
-                            </ul> #}
-                            <p class="c-author__text c-author__text-md">{{Html.decode(user.bio) | raw}}</p>
-                        </div>
-
+                    <div class="c-author__avatar c-author__avatar-xs u-image-covered" style="background-repeat:none;background-image:url({{profileImage}});">&nbsp;</div>
+                    <div class="c-author__details c-author__details-xs">
+                        <h3 class="c-author__name c-author__name-xs c-author__name-md">{{user.firstname | raw}} <br> {{user.lastname | raw}}</h3>
+                        <p class="c-author__text c-author__text-md">{{Html.decode(user.bio) | raw}}</p>
                     </div>
-
-
-                    {# <div class="c-author-right c-author-right-md">
-                        
-                    </div> #}
                 </div>
             </div>
-        </div>
-        <div class="row">
-
-            <div id="loadmore_section" class="col-md-8">
-
-                {% for i in 0..5 if userArticles[i] %}
-                    {{this.render('partials/_single-article.twig', {
-                        article: userArticles[i], 
-                        imageSize: {width:508, height:324},
-                        containerClass: 'card-5-mobile card-5-tablet card-5-desktop'
-                    }) | raw}}
-                {% endfor %}
-
-
-            </div>
-
-        </div>
-        {# {{dump(userArticles|length)}} #}
-
-
-        <div class="row">
-            <div class="col-md-8">
-                {% if userArticles|length >= limit %}
-                    <section class="">
-                        <div class="row">
-                            {{ this.render('partials/ajaxarticles_new.twig', {
-                                name            : "user-load",
-                                label           : "more",
-                                buttonClass     : "c-button c-button--rounded c-button--blue-bordered",
-                            }) | raw }}
+            <div class="col-12 col-lg-9">
+                <div class="row">
+                    <div class="col-12">
+                        <div class="c-cards-container c-cards-container-xs bottom-border">
+                            <div class="row">
+                                <div class="col-12">
+                                    <div class="col-12 col-lg-4 left-border">
+                                        {{this.render('partials/_single-article.twig', {
+                                            article: userArticles[0], 
+                                            imageSize: {width:508, height:324},
+                                            containerClass: 'card-2-mobile card-2-tablet card-2-desktop card-2--noDescription'
+                                        }) | raw}}
+                                    </div>
+                                </div>
+                            </div>
                         </div>
-                    </section>
-                {% endif %}
+                        <div class="c-cards-container c-cards-container-xs bottom-border">
+                            <div class="row">
+                                {% for i in 1..3 if userArticles[i] %}
+                                    <div class="col-12 col-lg-4 left-border">
+                                        {{this.render('partials/_single-article.twig', {
+                                            article: userArticles[i], 
+                                            imageSize: {width:508, height:324},
+                                            containerClass: 'card-2-mobile card-2-tablet card-2-desktop card-2--noDescription'
+                                        }) | raw}}
+                                    </div>
+                                {% endfor %}
+                            </div>
+                        </div>
+                        <div class="c-cards-container c-cards-container-xs bottom-border">
+                            <div class="row">
+                                {% for i in 4..6 if userArticles[i] %}
+                                    <div class="col-12 col-lg-4 left-border">
+                                        {{this.render('partials/_single-article.twig', {
+                                            article: userArticles[i], 
+                                            imageSize: {width:508, height:324},
+                                            containerClass: 'card-2-mobile card-2-tablet card-2-desktop card-2--noDescription'
+                                        }) | raw}}
+                                    </div>
+                                {% endfor %}
+                            </div>
+                        </div>
+                        <div class="c-cards-container c-cards-container-xs bottom-border">
+                            <div class="row">
+                                {% for i in 7..9 if userArticles[i] %}
+                                    <div class="col-12 col-lg-4 left-border">
+                                        {{this.render('partials/_single-article.twig', {
+                                            article: userArticles[i], 
+                                            imageSize: {width:508, height:324},
+                                            containerClass: 'card-2-mobile card-2-tablet card-2-desktop card-2--noDescription'
+                                        }) | raw}}
+                                    </div>
+                                {% endfor %}
+                            </div>
+                        </div>
+                        <div class="c-cards-container c-cards-container-xs bottom-border">
+                            <div class="row" id="loadmore_section">
+                                {% for i in 10..12 if userArticles[i] %}
+                                    <div class="col-12 col-lg-4 left-border">
+                                        {{this.render('partials/_single-article.twig', {
+                                            article: userArticles[i], 
+                                            imageSize: {width:508, height:324},
+                                            containerClass: 'card-2-mobile card-2-tablet card-2-desktop card-2--noDescription'
+                                        }) | raw}}
+                                    </div>
+                                {% endfor %}
+                            </div>
+                        </div>
+                    </div>
 
+                    <div class="col-12">
+                        {% if userArticles|length >= limit %}
+                            <section class="">
+                                <div class="row">
+                                    <div class="d-flex align-items-center justify-content-center mt-5">
+                                        {{ this.render('partials/ajaxarticles_new.twig', {
+                                            name            : "user-load",
+                                            label           : "loading more",
+                                            buttonClass     : "u-loadmore-button",
+                                        }) | raw }}
+                                    </div>
+                                </div>
+                            </section>
+                        {% endif %}
+
+                    </div>
+                </div>
             </div>
         </div>
     </div>
@@ -90,7 +125,7 @@
             limit           : {{limit}},
             loadtype        : 'user_articles',
             name            : 'user-load',
-            card_class      : 'card-5-mobile card-5-tablet card-5-desktop',
+            card_class      : 'card-2-mobile card-2-tablet card-2-desktop card-2--noDescription',
         });
 
     });
