--- a/static/sass/main.scss
+++ b/static/sass/main.scss
@@ -84,6 +84,8 @@
 @import "card-3";
 @import "card-4";
 @import "card-5";
+@import "card-6";
+@import "card-7";
 @import "card-9";
 
 @import "event-card";
