--- a/partials/panels/section-04.twig
+++ b/partials/panels/section-04.twig
@@ -21,7 +21,7 @@
                     article: articles[articleCount],
                     position: (articleCount+1),
                     imageSize: {width: 296, height: 260},
-                    containerClass: "card-7-mobile card-7-tablet card-7-desktop",
+                    containerClass: "card-2-mobile card-2-tablet card-7-desktop u-margin-bottom-20",
                     timeSuppress: timeSuppress
                     }) | raw}}
                     {% set articleCount = (dev) ? articleCount : articleCount + 1 %}
@@ -39,7 +39,7 @@
                             article: articles[articleCount],
                             position: (articleCount+1),
                             imageSize: {width: 296, height: 260},
-                            containerClass: "card-1-mobile card-1-tablet card-1-desktop",
+                            containerClass: "card-1-mobile card-1-tablet card-1-desktop u-margin-bottom-20",
                             timeSuppress: timeSuppress
                             }) | raw}}
                             {% set articleCount = (dev) ? articleCount : articleCount + 1 %}
