--- a/partials/panels/section-07.twig
+++ b/partials/panels/section-07.twig
@@ -24,7 +24,7 @@
                                 article: articles[articleCount],
                                 position: (articleCount+1),
                                 imageSize: {width: 296, height: 260},
-                                containerClass: "card-7-mobile card-7-tablet card-7-desktop",
+                                containerClass: "card-2-mobile card-2-tablet card-7-desktop",
                                 timeSuppress: timeSuppress
                                 }) | raw}}
                                 {% set articleCount = (dev) ? articleCount : articleCount + 1 %}
@@ -37,7 +37,7 @@
                                 position: (articleCount+1),
                                 imageSize: {width: 296, height: 260},
                                 containerClass: "card-2-mobile card-2-tablet card-2-desktop card-2--noDescription
-                                card--verticalMulti",
+                                card--verticalMulti card--verticalMulti-xs",
                                 timeSuppress: timeSuppress
                                 }) | raw}}
                                 {% set articleCount = (dev) ? articleCount : articleCount + 1 %}
